--- a/src/BddBundle/Resources/views/Liste/show.html.twig
+++ b/src/BddBundle/Resources/views/Liste/show.html.twig
@@ -19,12 +19,12 @@
     <ul class="media-list">
       {% for listeCoaster in liste.listeCoasters %}
         {% set coaster = listeCoaster.coaster %}
-        {% set image = images[coaster.id] %}
         <li class="media panel-body stack-media-on-mobile">
           <div class="media-left">
             <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
-              {% if image|length > 0 %}
-                <img src="{{ asset(random(image)) | imagine_filter('thumb_coaster') }}"
+              {% if coaster.images|length > 0 %}
+                {% set image = random(coaster.images) %}
+                <img src="{{ asset('images/coasters/' ~ image.path) | imagine_filter('thumb_coaster') }}"
                      class="img-rounded"
                      style="width:96px;"
                      alt="{{ coaster.name }}">
