--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -173,7 +173,7 @@
               </div>
             </div>
           {% endif %}
-          {% if coaster.builtCoaster.isKiddie %}
+          {% if coaster.builtCoaster.kiddie %}
             <div class="list-group-item">
               <label class="control-label no-margin text-semibold">{{ 'coaster.infos.kiddie'|trans }}:</label>
               <div class="pull-right"><i class="icon-checkmark3"></i></div>
