--- a/src/BddBundle/Resources/views/Liste/edit.html.twig
+++ b/src/BddBundle/Resources/views/Liste/edit.html.twig
@@ -24,9 +24,9 @@
       <h4>
         {{ form.vars.data.coaster.name|default('__coastername__') }}
         {% if form.vars.data is not null %}
-        -
-        {{ form.vars.data.coaster.park.name|default('') }}
-        ({{ form.vars.data.coaster.userRating(app.user).value }})
+          -
+          {{ form.vars.data.coaster.park.name|default('') }}
+          ({{ form.vars.data.coaster.userRating(app.user).value|default('N/A') }})
         {% endif %}
       </h4>
     </div>
@@ -44,9 +44,14 @@
   {{ form_start(form) }}
   <div class="panel panel-flat">
     <div class="panel-heading">
-            <span class="panel-title">
-                {{ 'liste.info'|trans }}
-            </span>
+      <span class="panel-title">
+        {{ 'liste.info'|trans }}
+      </span>
+      {% if form.vars.errors is not empty %}
+        <div class="alert alert-danger alert-styled-left alert-dismissible">
+          {{ form_errors(form) }}
+        </div>
+      {% endif %}
     </div>
     <div class="panel-body">
       <ul id="liste-coaster"
