--- a/src/BddBundle/Resources/views/Liste/show.html.twig
+++ b/src/BddBundle/Resources/views/Liste/show.html.twig
@@ -22,9 +22,8 @@
         <li class="media panel-body stack-media-on-mobile">
           <div class="media-left">
             <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
-              {% if coaster.images|length > 0 %}
-                {% set image = random(coaster.images) %}
-                <img src="{{ image.path | imagine_filter('thumb_coaster') }}"
+              {% if coaster.mainImage is not null %}
+                <img src="{{ coaster.mainImage.path | imagine_filter('thumb_coaster') }}"
                      class="img-rounded"
                      style="width:96px;"
                      alt="{{ coaster.name }}">
